favorites eklendi angulardan nefret ediyorum
