# angular-network/src/main/java/com/angular/angularnetwork/favorites/FavoritesRequest.java
@@ -1,0 +1,12 @@
+package com.angular.angularnetwork.favorites;
+
+
+import jakarta.validation.constraints.NotNull;
+
+public record FavoritesRequest(
+
+        @NotNull
+        Integer productId
+
+) {
+}
