# steam-escrow-ui/src/app/services/models/favorites-response.ts
@@ -1,0 +1,10 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+import { ProductResponse } from '../models/product-response';
+export interface FavoritesResponse {
+  addedDate?: string;
+  id?: number;
+  productResponse: ProductResponse;
+}
