# steam-escrow-ui/src/app/services/models/page-response-favorites-response.ts
@@ -1,0 +1,14 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+import { FavoritesResponse } from '../models/favorites-response';
+export interface PageResponseFavoritesResponse {
+  content?: Array<FavoritesResponse>;
+  first?: boolean;
+  last?: boolean;
+  number?: number;
+  size?: number;
+  totalElements?: number;
+  totalPages?: number;
+}
